--- a/packages/ui-lib/src/styles/content.module.css
+++ b/packages/ui-lib/src/styles/content.module.css
@@ -16,7 +16,8 @@
   @apply list-decimal list-inside pl-5
 }
 
-.content ol li, .content ul li {
+.content ol li,
+.content ul li {
   @apply py-1
 }
 
@@ -28,15 +29,28 @@
   @apply border-border w-full max-w-screen-md m-5
 }
 
-.content > p, .content > ul, .content > ol, .content > blockquote, .content > h1, .content > h2, .content > h3, .content > h4, .content > h5, .content > h6 {
+.content > p,
+.content > ul,
+.content > ol,
+.content > blockquote,
+.content > h1,
+.content > h2,
+.content > h3,
+.content > h4,
+.content > h5,
+.content > h6 {
   @apply w-full max-w-screen-md
 }
 
-.content > h1, .content > h2, .content > h3 {
+.content > h1,
+.content > h2,
+.content > h3 {
   @apply my-3
 }
 
-.content > h4, .content > h5, .content > h6 {
+.content > h4,
+.content > h5,
+.content > h6 {
   @apply my-2
 }
 
